--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                    <div class="portfolio-item-thumbnail">
                        <img src="img/app.jpg" alt="portfolio item thumb">
                    </div>
-                   <h3 class="portfolio-item-title">College Apps</h3>
+                   <h3 class="portfolio-item-title">EduMate</h3>
                    <button type="button" class="btn view-project-btn">view project</button>
                    <div class="portfolio-item-details">
                        <div class="description">
